# cfc

./: build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml  anudroid.yml
app/: build.gradle
app/src/cpp/: CMakeLists.txt
app/src/main/java/org/cimbar/camerafilecopy/: MainActivity.java  OpencvCamera2View.java  OpencvCameraView.java
gradle/wrapper/: gradle-wrapper.properties
